<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guia La Mesa</string>
    <string name="action_settings">Clima</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="nombre_label">Nombre</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_resgistrar">Registrar Lugar</string>
    <string name="btn_buscar">Buscar Lugares</string>
    <string name="title_activity_registro_lugar">RegistroLugar</string>

    <!-- Registro Lugar -->
    <string name="lugar_nombre">Nombre</string>
    <string name="lugar_dir">Dirección</string>
    <string name="lugar_lon">Longitud</string>
    <string name="lugar_lat">Latitud</string>
    <string name="btn_registrar_action">Registrar</string>
    <string name="registrar_title">Registro de Lugar Turístico</string>
    <string name="label_nombre">label_nombre</string>
    <string name="label_direccion">label_direccion</string>
    <string name="btn_check_place_map">Seleccionar ubicación (Mapa)</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="btn_confirmar">Confirmar Ubicación</string>

</resources>
